[gd_scene load_steps=3 format=3 uid="uid://cib1fq003l5jx"]

[ext_resource type="Theme" uid="uid://dk5iv042psfw" path="res://assets/themes/Default.tres" id="1_4cvkc"]
[ext_resource type="Script" path="res://src/indoor_preparation/screen_displays/shared/screen_notification.gd" id="2_hcuqa"]

[node name="ScreenNotification" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4cvkc")
script = ExtResource("2_hcuqa")

[node name="PC" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.5
offset_top = -28.0
offset_right = 106.5
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2

[node name="MC" type="MarginContainer" parent="PC"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBC" type="VBoxContainer" parent="PC/MC"]
layout_mode = 2

[node name="Header" type="Label" parent="PC/MC/VBC"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Notification"

[node name="PC2" type="PanelContainer" parent="PC/MC/VBC"]
layout_mode = 2

[node name="MC2" type="MarginContainer" parent="PC/MC/VBC/PC2"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBC2" type="VBoxContainer" parent="PC/MC/VBC/PC2/MC2"]
layout_mode = 2

[node name="Body" type="Label" parent="PC/MC/VBC/PC2/MC2/VBC2"]
layout_mode = 2
text = "%s was hired successfully!"

[node name="ExpirationBar" type="ProgressBar" parent="PC/MC/VBC/PC2/MC2/VBC2"]
layout_mode = 2
value = 50.0
fill_mode = 1
show_percentage = false

[node name="ExpirationTimer" type="Timer" parent="."]
one_shot = true
